--- a/twitterweek3/Base.lproj/Main.storyboard
+++ b/twitterweek3/Base.lproj/Main.storyboard
@@ -173,7 +173,7 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="New" id="YfP-P8-ebT">
                             <connections>
-                                <segue destination="NGO-TE-52E" kind="presentation" id="Xe3-Bd-9Xh"/>
+                                <action selector="onNew:" destination="A44-qJ-LOb" id="tVx-Ik-2D7"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -341,7 +341,11 @@
                                 <action selector="onHomeButton:" destination="adE-k7-RlA" id="0ok-nL-L5n"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Reply" id="Bux-gV-dKE"/>
+                        <barButtonItem key="rightBarButtonItem" title="Reply" id="Bux-gV-dKE">
+                            <connections>
+                                <action selector="onReply:" destination="adE-k7-RlA" id="Wfc-Bs-7Eh"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="whR-LY-fRI" id="Cac-L6-3FC"/>
@@ -390,7 +394,7 @@
         <!--New Tweet View Controller-->
         <scene sceneID="J7n-ki-Ga3">
             <objects>
-                <viewController id="0TA-Oa-90s" customClass="NewTweetViewController" customModule="twitterweek3" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="NewTweetViewController" id="0TA-Oa-90s" customClass="NewTweetViewController" customModule="twitterweek3" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="3h9-gw-aCI"/>
                         <viewControllerLayoutGuide type="bottom" id="I1k-cG-EXR"/>
@@ -411,15 +415,48 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="462"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hi there" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I9x-iJ-KOP">
-                                                    <rect key="frame" x="60" y="96" width="61" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Victoria" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I9x-iJ-KOP">
+                                                    <rect key="frame" x="114" y="28" width="61" height="19.5"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="vixxku" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="My1-hx-gxs">
+                                                    <rect key="frame" x="117" y="54" width="43.5" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7pZ-Cy-YYy">
+                                                    <rect key="frame" x="21" y="15" width="77" height="73"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="77" id="HRt-sU-PgV"/>
+                                                        <constraint firstAttribute="height" constant="73" id="T5y-zj-GXj"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="zkR-01-rMj">
+                                                    <rect key="frame" x="24" y="108" width="326" height="183"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                </textView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="I9x-iJ-KOP" firstAttribute="leading" secondItem="7pZ-Cy-YYy" secondAttribute="trailing" constant="16" id="Giv-kc-T6n"/>
+                                                <constraint firstItem="My1-hx-gxs" firstAttribute="top" secondItem="I9x-iJ-KOP" secondAttribute="bottom" constant="6.5" id="HRF-3a-HbY"/>
+                                                <constraint firstItem="7pZ-Cy-YYy" firstAttribute="leading" secondItem="PBw-H3-N4g" secondAttribute="leading" constant="21" id="JfO-TZ-ZCx"/>
+                                                <constraint firstItem="My1-hx-gxs" firstAttribute="leading" secondItem="7pZ-Cy-YYy" secondAttribute="trailing" constant="19" id="euL-l8-bSq"/>
+                                                <constraint firstItem="I9x-iJ-KOP" firstAttribute="top" secondItem="PBw-H3-N4g" secondAttribute="top" constant="28" id="kr4-ZS-pcs"/>
+                                                <constraint firstItem="7pZ-Cy-YYy" firstAttribute="top" secondItem="PBw-H3-N4g" secondAttribute="top" constant="15" id="s5T-zq-pHd"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="detHandleLabel" destination="My1-hx-gxs" id="Mcb-6b-8zE"/>
+                                            <outlet property="detNameLabel" destination="I9x-iJ-KOP" id="2bk-OY-Gnp"/>
+                                            <outlet property="profileImgView" destination="7pZ-Cy-YYy" id="ErC-d4-9RT"/>
+                                            <outlet property="textView" destination="zkR-01-rMj" id="AdT-3i-ylD"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
